ruby/rb-json: upgrade to 1.4.6. use rubygems.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70469 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb-json/Portfile
+++ b/dports/ruby/rb-json/Portfile
@@ -1,41 +1,20 @@
 # $Id$
 
-PortSystem		1.0
-PortGroup		ruby 1.0
+PortSystem		    1.0
+PortGroup		    ruby 1.0
 
-name			rb-json
-version			1.1.2
-categories		ruby
+ruby.setup          json 1.4.6 gem {} rubygems
+description         JSON implementation as a Ruby extension in C
+long_description    \
+    This is a implementation of the JSON specification according to RFC 4627. \
+    You can think of it as a low fat alternative to XML, if you want to store \
+    data to disk or transmit it over a network rather than use a verbose \
+    markup language.
+license             Ruby
+maintainers         kimuraw openmaintainer
+homepage            http://flori.github.com/json/
+platforms			darwin
+checksums           md5     10a923c1c031c55d2bac861664431301 \
+                    sha1    a50accee91805a57eb5f4613073edeb422043c57 \
+                    rmd160  bd5736e685d347e774d1a8800f60a8a21f59da2d
 
-homepage		http://json.rubyforge.org/
-master_sites		http://rubyforge.org/frs/download.php/28483/
-
-distname                json-${version}
-dist_subdir             ruby
-
-description       	This is a implementation of the JSON specification according to RFC 4627.
-
-long_description  	This is a implementation of the JSON specification according to RFC 4627. \
-                  	You can think of it as a low fat alternative to XML, if you want to store \
-                  	data to disk or transmit it over a network rather than use a verbose markup language.
-
-maintainers		gmail.com:roger.hoover
-
-checksums		md5 	27834a3df714719e8fa9ff2efb5edc6d \
-			sha1	97b652157f352fecb7da2545eec4cc20c7ad2594
-
-patchfiles		patch-install.rb
-extract.suffix		.tgz
-platforms		darwin
-
-configure {
-	file mkdir "${destroot}/${ruby.lib}"
-}
-
-build {}
-destroot.cmd	${ruby.bin} install.rb 
-destroot.args	${destroot}
-destroot.target	""
-destroot.env	""
-
-depends_lib     port:ruby port:rb-rubygems
