ruby/rb-rubyforge: upgrade to 2.0.4
git-svn-id: https://svn.macports.org/repository/macports/trunk@70471 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb-rubyforge/Portfile
+++ b/dports/ruby/rb-rubyforge/Portfile
@@ -3,17 +3,20 @@
 PortSystem			1.0
 PortGroup			ruby 1.0
 
-ruby.setup			rubyforge 1.0.0 gem {} rubyforge_gem
-maintainers			nomaintainer
+ruby.setup			rubyforge 2.0.4 gem {} rubyforge_gem
+maintainers			kimuraw openmaintainer
 description			A simplistic script which automates a limited set of \
 					rubyforge operations
 long_description	${description}
-checksums			md5 f62026740e57c513744ec76d6885c56d \
-					sha1 1c5e7f4bb0c3a21743d3223f5d505f985f7673d2 \
-					rmd160 345214a148dff4c6a3bc8f2d3e3506c5d43b3f25
+checksums			md5 c1793a26ba6cbe3dfdf6d9fa242f2428 \
+					sha1 e497a1e92500ff679c227bae6417e04e1c429420 \
+					rmd160 7b4fcf19270928c57af753f87e4f5026badaff76
 platforms			darwin
-homepage			http://codeforpeople.com/lib/ruby/rubyforge/
+homepage			http://codeforpeople.rubyforge.org/rubyforge/
+license				MIT
+depends_lib-append	port:rb-json_pure
 
 livecheck.type	regex
 livecheck.regex	"<b>${ruby.module}-(.*)</b>"
 livecheck.url	http://gentoo-portage.com/dev-ruby/${ruby.module}
+
