--- a/dports/lang/llvm/Portfile
+++ b/dports/lang/llvm/Portfile
@@ -3,30 +3,39 @@
 PortSystem 1.0
 
 name                    llvm
-version                 2.6
+version                 2.7
 revision                2
 categories              lang
 platforms               darwin
-use_parallel_build      yes
-maintainers             erickt openmaintainer
+license                 UIUC/NCSA
+maintainers             erickt mfeiri
 description             llvm is a next generation compiler infrastructure
-long_description        llvm brings tools to work on the llvm intermediate \
-                        language incl. a C and C++ frontend.
+long_description        The LLVM Core libraries provide a modern source- and \
+                        target-independent optimizer, along with code \
+                        generation support for many popular CPUs (as well as \
+                        some less common ones!) These libraries are built \
+                        around a well specified code representation known as \
+                        the LLVM intermediate representation ("LLVM IR").
 
 homepage                http://llvm.org/
 master_sites            ${homepage}releases/${version}/
 
-checksums               md5     34a11e807add0f4555f691944e1a404a \
-                        sha1    547471147cbf6d3e49539e01196ffada2c79c250 \
-                        rmd160  24d58cb052ab5879aae59eaf4885ec41186ee22a
+extract.suffix          .tgz
 
-depends_lib             path:bin/perl:perl5
+checksums               md5     ac322661f20e7d6c810b1869f886ad9b \
+                        sha1    059fc21b0ec1b649c4a3dec81756e5f92aa131a2 \
+                        rmd160  0fa2f362dd6a45efec35ce8fa0f8d36d98f32c8f
+
+depends_lib             port:libffi
+depends_run             bin:perl:perl5
 
 universal_variant       no
 
 configure.dir           ${workpath}/build
 build.dir               ${configure.dir}
 destroot.dir            ${configure.dir}
+
+build.env-append        REQUIRE_RTTI=1
 
 post-extract {
     file mkdir ${configure.dir}
@@ -39,11 +48,15 @@ configure.cppflags
 configure.ldflags
 configure.cmd           ${worksrcpath}/configure
 configure.args          --enable-optimized --enable-jit \
-                        --enable-bindings=none \
-                        --disable-assertions
+                        --enable-bindings=none --enable-libffi \
+                        --disable-assertions --enable-shared
 
-if {[info exists build_arch] && ${os.platform} == "darwin"} {
-    configure.args-append --build=${build_arch}-apple-darwin${os.major}
+platform darwin {
+    if {${build_arch} == "i386" } {
+        configure.pre_args-append --build=i686-apple-darwin${os.major}
+    } else {
+        configure.pre_args-append --build=${build_arch}-apple-darwin${os.major}
+    }
 }
 
 post-destroot {
@@ -55,6 +68,13 @@ post-destroot {
     file copy ${configure.dir}/include ${destroot}${prefix}/lib/llvm/obj
     file copy ${configure.dir}/Release-Asserts ${destroot}${prefix}/lib/llvm/obj
 
+    file copy ${configure.dir}/Makefile.config ${destroot}${prefix}/lib/llvm/obj
+    
+    file copy ${configure.dir}/Release-Asserts/bin/llvm-mc ${destroot}${prefix}/bin/
+    
+    system "install_name_tool -id ${prefix}/lib/libLLVMHello.dylib ${destroot}${prefix}/lib/libLLVMHello.dylib"
+    system "install_name_tool -id ${prefix}/lib/libprofile_rt.dylib ${destroot}${prefix}/lib/libprofile_rt.dylib"
+    
     reinplace "s|${worksrcpath}|${prefix}/lib/llvm/src|g"       ${destroot}${prefix}/bin/llvm-config \
                                                                 ${destroot}${prefix}/lib/llvm/obj/Release-Asserts/bin/llvm-config
     reinplace "s|${configure.dir}|${prefix}/lib/llvm/obj|g"     ${destroot}${prefix}/bin/llvm-config \
@@ -68,7 +88,6 @@ post-destroot {
 }
 
 variant ocaml description {Enable generation of OCaml binding} {
-    depends_build-append port:ocaml
     depends_lib-append   port:ocaml
 
     configure.args-delete --enable-bindings=none
