--- a/dports/devel/pkgconfig/Portfile
+++ b/dports/devel/pkgconfig/Portfile
@@ -4,6 +4,7 @@ PortSystem          1.0
 
 name                pkgconfig
 version             0.25
+revision            1
 categories          devel
 maintainers         ryandesign
 license             GPL-2+
@@ -24,6 +25,8 @@ long_description    The pkg-config program is used to retrieve information \
 checksums           md5     a3270bab3f4b69b7dc6dbdacbcae9745 \
                     sha1    8922aeb4edeff7ed554cc1969cbb4ad5a4e6b26e \
                     rmd160  835509d01f68c45823ee89c718776eb66f61316b
+
+patchfiles          patch-underquoting.diff
 
 configure.args      --enable-indirect-deps \
                     --with-pc-path=${prefix}/lib/pkgconfig:${prefix}/share/pkgconfig
