endian: support universal and non-default-build_arch builds; see #25990 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70480 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/endian/Portfile
+++ b/dports/sysutils/endian/Portfile
@@ -13,7 +13,15 @@ homepage	http://personalpages.tds.net/~jwbacon/Ports/
 master_sites	${homepage}distfiles/ \
 		http://jbacon.dyndns.org/~bacon/Ports/distfiles/
 use_configure	no
-build.args	CC=${configure.cc}
+
+variant universal {}
+if {[variant_isset universal]} {
+	set archflags ${configure.universal_ldflags}
+} else {
+	set archflags ${configure.cc_archflags}
+}
+build.args	CC="${configure.cc} ${archflags}"
+
 destroot	{
 	xinstall -d -m 0755 ${destroot}${prefix}/bin
 	xinstall -d -m 0755 ${destroot}${prefix}/share/man/man1
