Correct #include Phonon -> phonon .
git-svn-id: https://svn.macports.org/repository/macports/trunk@70481 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/ktorrent/Portfile
+++ b/dports/kde/ktorrent/Portfile
@@ -29,3 +29,11 @@ set qca_dir          ${prefix}/libexec/qt4-mac
 configure.args-append	../${distname} \
 		-DQCA2_LIBRARIES=${qca_dir}/lib/libqca.2.dylib \
 		-DQCA2_INCLUDE_DIR=${qca_dir}/include/QtCrypto 
+
+post-extract {
+    # change #include <Phonon...> to <phonon...> in all files that
+    # contain that header.
+    foreach item [exec grep -lr "Phonon" ${workpath}/${distname}] {
+        reinplace "/#include/s@Phonon@phonon@" ${item}
+    }
+}
