--- a/dports/graphics/xv/Portfile
+++ b/dports/graphics/xv/Portfile
@@ -52,11 +52,20 @@ patch {
 
 use_configure           no
 
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
+
 build.post_args         PREFIX='${prefix}' \
                         ZLIBDIR='${prefix}' \
                         JPEGDIR='${prefix}' \
                         TIFFDIR='${prefix}' \
                         PNGDIR='${prefix}' \
+                        CC='${configure.cc}' \
+                        CCOPTS='${configure.cflags} ${archflags}'
 
 destroot.post_args      PREFIX='${prefix}' DESTDIR='${destroot}'
 
