--- a/dports/lang/gcc45/Portfile
+++ b/dports/lang/gcc45/Portfile
@@ -4,8 +4,7 @@ PortSystem 1.0
 
 name			gcc45
 epoch			1
-version			4.5.0
-revision		4
+version			4.5.1
 platforms		darwin
 categories		lang
 maintainers		mww
@@ -35,26 +34,26 @@ distfiles		${dcore}:gcc ${dfort}:gcc ${dcxx}:gcc ${djava}:gcc ${dobjc}:gcc ${ecj
 extract.only		${dcore} ${dfort} ${dcxx} ${djava} ${dobjc}
 
 checksums           gcc-core-${version}.tar.bz2 \
-                    md5     58eda33c3184303628f91c42a7ab15b5 \
-                    sha1    c0dac59ff47a4de527c2e84047e83d5bf2192056 \
-                    rmd160  7cb03a30acda93ed6960657fbc0295bb6b16288d \
+                    md5     dc8959e31b01a65ce10d269614815054 \
+                    sha1    41104d6c872139e7f7331849e4ddcede63ca814b \
+                    rmd160  6d3627840eac6d45eedb8f994d497efcf71e47fa \
                     gcc-fortran-${version}.tar.bz2 \
-                    md5     670c35720f9a599ae7b469da95152552 \
-                    sha1    2b5b09372b3aec0d9fe91b10a79e78e71adce3b3 \
-                    rmd160  b4da72559d1728353a00718da067593ce678f92a \
+                    md5     7567c2f8df8a8bf61b48fe414b88de65 \
+                    sha1    6f5dfa1f9c9bbb89a9b6a93c64e839b0f682551e \
+                    rmd160  9b97cfbf3932eced424ae192ed77d52afb386ba0 \
                     gcc-g++-${version}.tar.bz2 \
-                    md5     5ab93605af40def4844eda09ca769c2d \
-                    sha1    a07af0417d66748a5f0dc06c4744e8990aaa7304 \
-                    rmd160  785ea42e0011a9bdfe74efce14082f1f0b6ea05a \
+                    md5     b294953ff0bb2f20c7acb2bf005d832a \
+                    sha1    f5c51ecb05ed2361c129973fd963291a8cbab3a9 \
+                    rmd160  48557192c8b01684485792ca03233c93a9eed781 \
                     gcc-java-${version}.tar.bz2 \
-                    md5     945e6c4b17c60b0590c350238289b0af \
-                    sha1    34340fbaef62808c6825f681753dba82adf78f5f \
-                    rmd160  4d5c5dddeabeab74c4f6eb392afa1b5c29d723c4 \
+                    md5     0f8692921c918ae6491857e5b00acc53 \
+                    sha1    9fcfed6ab05a2a7f6291cde725b6fba229dee3e7 \
+                    rmd160  7d16732b5176f69876367e646671176ad3a35d35 \
                     gcc-objc-${version}.tar.bz2 \
-                    md5     8d8c01b6631b020cc6c167860fde2398 \
-                    sha1    bca51ee80f3bc240b6dd84535d49423423eb457e \
-                    rmd160  9512ff932be7fa36d3f2c8b3ca3e41089ac5a6e8 \
-                    ${ecj} \
+                    md5     3c11b7037896e967eddf8178af2ddd98 \
+                    sha1    9117b317f42d7b0c135fc04b0bf556a8ae0d0b6c \
+                    rmd160  3ff188cf3c629f31353cfafe762c5234abee7a69 \
+                    ecj-4.5.jar \
                     md5     d7cd6a27c8801e66cbaa964a039ecfdb \
                     sha1    58c1d79c64c8cd718550f32a932ccfde8d1e6449 \
                     rmd160  d3f4da657f086b6423f74e93f001132f4855368a
@@ -62,9 +61,6 @@ checksums           gcc-core-${version}.tar.bz2 \
 use_bzip2		yes
 
 depends_lib		port:gmp port:mpfr port:libiconv port:libmpc
-
-patchfiles		tls_configure_fix.diff
-patch.dir		${workpath}/gcc-${version}
 
 set major		4.5
 
