don't override worksrcdir when configure.args will suffice
git-svn-id: https://svn.macports.org/repository/macports/trunk@70496 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qjson/Portfile
+++ b/dports/devel/qjson/Portfile
@@ -20,4 +20,4 @@ use_bzip2           yes
 checksums           sha1    19bbef24132b238e99744bb35194c6dadece98f9 \
                     rmd160  9b333dda51c70a8994d3203b238fe33ec3281af5
 
-worksrcdir          ${name}
+configure.args-append   ../${name}
