--- a/dports/ruby/rb-password/Portfile
+++ b/dports/ruby/rb-password/Portfile
@@ -3,8 +3,8 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		{password ruby-password} 0.5.2 extconf.rb {README doc example}
-revision		1
+ruby.setup		{password ruby-password} 0.5.3 extconf.rb {README doc example}
+revision		0
 maintainers		nomaintainer
 description		password manipulation methods for Ruby
 long_description	Ruby/Password comprises a set of useful methods for \
@@ -17,7 +17,7 @@ long_description	Ruby/Password comprises a set of useful methods for \
 categories-append	sysutils
 homepage		http://www.caliban.org/ruby/
 master_sites	http://www.caliban.org/files/ruby/
-checksums		md5 6a33fb9dd039f07fe2b81a0d8eed7f6f
+checksums		md5 b4304bab359bdc95bc7f0938b0db4bed
 platforms		darwin
 
 depends_lib-append		port:cracklib \
@@ -31,7 +31,7 @@ post-patch {
 	reinplace "s|pw_dict|cracklib/&|g" ${worksrcpath}/extconf.rb
 }
 
-configure.args-append --with-crack-dict=${prefix}/share/cracklib
+configure.args-append --with-crack-dict=${prefix}/share/cracklib/pw_dict.pwd
 
 post-build {
 	system "cd ${worksrcpath} && ${ruby.rdoc} -x CVS rbcrack.c"
