--- a/dports/gnome/gnome-keyring/Portfile
+++ b/dports/gnome/gnome-keyring/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            gnome-keyring
-version         2.26.3
+version         2.30.3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      gnome
@@ -21,9 +21,11 @@ homepage        http://live.gnome.org/GnomeKeyring/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     d7639185dce46c26cf2e7d2a75028f78 \
-                sha1    c07136f0757937a7fe6989cbdf3bf8103da55364 \
-                rmd160  323cf0fe5f11260573e0d20998c879380f4c2122
+checksums       md5     54cb1835c02a40f27fda73e58da17cc6 \
+                sha1    0e0a2a1f4127dc6a01583fb3e81386370d9335f0 \
+                rmd160  9bd3cea25e10e1dcd93cfbc75a6a448e8ab338ca
+
+patchfiles      patch-pkcs11-secret-store-Makefile.in.diff
 
 depends_build   port:pkgconfig \
                 port:intltool
