libgnomecanvas: update to version 2.30.1.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70507 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libgnomecanvas/Portfile
+++ b/dports/gnome/libgnomecanvas/Portfile
@@ -4,9 +4,8 @@
 PortSystem  1.0
 
 name		libgnomecanvas
-version         2.26.0
+version         2.30.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
-revision        1
 description	A graphics library for GNOME.
 long_description        The GNOMECanvas library provides a number \
 			of features: \
@@ -20,9 +19,9 @@ platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     9bbc635e5ae70e63af071af74ba7e72f \
-                sha1    d0429140c3ae8974562f4eb34e89d4f512e8e4ec \
-                rmd160  87eb8f61b4ed8c3c3ede4941aeb8b539731d1d9f
+checksums       md5     362ab7b81024b3c3b4a712e7df01b169 \
+                sha1    2837b5a388b2b206481d3cd99762a5a59fa53a12 \
+                rmd160  dafdf8cbf24e664d1be4657ee95e55a130a098f1
 
 depends_build   port:pkgconfig \
                 port:p5-xml-parser \
@@ -36,6 +35,8 @@ depends_lib     port:gtk2 \
                 port:libglade2
 
 use_bzip2 	yes
+
+configure.args  --enable-glade
 
 configure.cppflags-append "-L${prefix}/lib"
 
