--- a/dports/sysutils/john/Portfile
+++ b/dports/sysutils/john/Portfile
@@ -4,8 +4,8 @@ PortSystem          1.0
 
 name                john
 conflicts           john-devel
-version             1.7.3.4
-revision            1
+version             1.7.6
+revision            0
 categories          sysutils security
 maintainers         nomaintainer
 description         Featureful Unix password cracker
@@ -33,12 +33,12 @@ master_sites        http://download.openwall.net/pub/projects/john/${version}/ \
                     ftp://ftp.cz.openwall.com/pub/projects/john/${version}/
 use_bzip2           yes
 
-checksums           md5     2f2310c49961c3edea6f92b8dcd45ff4 \
-                    sha1    3919cac037360512e6d72d04d72d492ee9673ded \
-                    rmd160  a3a27c24eb71af8797bc02621ed02a8c9edd6b1d
+checksums           md5     321ac0793f1aa4f0603b33a393133756 \
+                    sha1    a767b65d8387d264238db7c5613986fc88b730aa \
+                    rmd160  de0de4970986064f6a8cf99835ff41cef1c2547f
 
-patchfiles          patch-src-Makefile.diff \
-                    patch-src-params.h.diff
+patchfiles          patch-src-params.h.diff
+
 post-patch {
     reinplace "s|@PREFIX@|${prefix}|g" ${worksrcpath}/src/params.h
 }
