at-spi: update to version 1.30.1, use python26, update dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70513 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/at-spi/Portfile
+++ b/dports/gnome/at-spi/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name                at-spi
-version             1.26.0
-revision            1
+version             1.30.1
 set branch          [join [lrange [split ${version} .] 0 1] .]
 description         Gnome Accesibility Technology Service
 long_description \
@@ -18,9 +17,9 @@ platforms           darwin
 homepage            http://developer.gnome.org/projects/gap/
 master_sites        gnome:sources/${name}/${branch}/
 
-checksums           md5     3f2f7d29b45eff08adf56af0d31d3984 \
-                    sha1    814871ea8a04570d44003ceffc166cbe44a8bb7c \
-                    rmd160  e8cc5da683ec4289f552bbc07a08ee70cac5c3c7
+checksums           md5     29fdf7934e98efda5fe0ab74ab4d3f29 \
+                    sha1    d7bf78555e8025e42325437d7809e1c98a35389e \
+                    rmd160  f317c5ad38a6f79b1917f3173e77e4746f79408b
 
 depends_build       port:p5-xml-parser \
                     port:pkgconfig
@@ -28,10 +27,16 @@ depends_build       port:p5-xml-parser \
 depends_lib         port:atk \
                     port:gtk2 \
                     port:libbonobo \
-                    port:python25 \
+                    port:py26-gnome \
                     port:xorg-libXtst
 
 use_bzip2           yes
+
+patchfiles          patch-pyatspi-Makefile.in.diff
+
+post-patch          {
+                        reinplace "s|__MP_PYTHON_EXEC_DIR__|${prefix}//Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/site-packages|" ${worksrcpath}/pyatspi/Makefile.in
+                    }
 
 configure.args      --enable-static \
                     --disable-xevie \
@@ -40,7 +45,7 @@ configure.args      --enable-static \
                     --x-libraries=${prefix}/lib \
                     --disable-schemas-install
  
-configure.python    ${prefix}/bin/python2.5
+configure.python    ${prefix}/bin/python2.6
 
 variant no_x11 {
    pre-fetch {
