opencv: disable universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@70515 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/opencv/Portfile
+++ b/dports/graphics/opencv/Portfile
@@ -47,8 +47,11 @@ depends_lib-append              port:zlib \
                                 port:libdc1394 \
                                 port:orc
 
+# ffmpeg is not universal
+universal_variant               no
+
 patchfiles                      patch-CMakeLists.txt.diff
-if {[variant_isset universal]} {
+if {[variant_isset universal] && [variant_exists universal]} {
     patchfiles-append           patch-pch-CMakeLists.txt.diff
 }
 
