swftools: updated to 0.9.1. Replaced patch-Makefile.common.in.diff with reinplace
git-svn-id: https://svn.macports.org/repository/macports/trunk@70517 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/swftools/Portfile
+++ b/dports/graphics/swftools/Portfile
@@ -2,8 +2,7 @@
 
 PortSystem          1.0
 name                swftools
-version             0.9.0
-revision            3
+version             0.9.1
 categories          graphics
 maintainers         nomaintainer
 description         SWF manipulation and generation tools
@@ -14,14 +13,17 @@ platforms           darwin
 homepage            http://www.swftools.org
 master_sites        ${homepage}
 
-checksums           md5     946e7c692301a332745d29140bc74e55 \
-                    sha1    4860edc9f05e3cc5a55779aac3787cb0150146a8 \
-                    rmd160  e87430e1ac52d317dd762cbe024f391bf352b120
+checksums           md5     72dc4a7bf5cdf98c28f9cf9b1d8f5d7a \
+                    sha1    6aac250f7cbe034c1c638ee1a1fa2f3a554d1311 \
+                    rmd160  cf57bfdf92e352385f57db55c8f3987bef8808f2
 
 depends_lib         port:jpeg port:openjpeg port:freetype port:lame \
                     path:include/gif_lib.h:giflib port:python26
 
-patchfiles          patch-Makefile.common.in.diff
+#patchfiles          patch-Makefile.common.in.diff
+post-patch {
+   reinplace "s|@prefix@|\$(DESTDIR)/@prefix@|" ${worksrcpath}/Makefile.common.in
+}
 
 configure.python    ${prefix}/bin/python2.6
 # Make sure to not link against OpenGL libs from the mesa port, in case it
