Update dependents of gnome-keyring to depend on libgnome-keyring where appropriate and rebuild.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70519 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gvfs/Portfile
+++ b/dports/devel/gvfs/Portfile
@@ -6,6 +6,7 @@ PortGroup       archcheck 1.0
 
 name            gvfs
 version         1.6.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      devel
@@ -48,7 +49,7 @@ depends_lib \
     port:gconf \
     port:gettext \
     path:lib/pkgconfig/glib-2.0.pc:glib2 \
-    port:gnome-keyring \
+    port:libgnome-keyring \
     port:libarchive \
     port:libsoup \
     port:libxml2
