--- a/dports/gnome/evince/Portfile
+++ b/dports/gnome/evince/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 
 name            evince
 version         2.26.2
-revision        2
+revision        3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Evince is a document viewer for multiple document formats like pdf, and many others.
 long_description \
@@ -22,7 +22,7 @@ checksums       md5     ed8b9fb5c5d6feafd19f0114b736c9ef \
                 rmd160  00dd3dfa006dc019f8f951a356d7260283bf8bab
 
 depends_lib     port:gconf \
-                port:gnome-keyring \
+                port:libgnome-keyring \
                 port:gnome-icon-theme \
                 port:poppler \
                 port:t1lib \
