--- a/dports/gnome/gst-plugins-good/Portfile
+++ b/dports/gnome/gst-plugins-good/Portfile
@@ -5,6 +5,7 @@ PortSystem  1.0
 
 name                gst-plugins-good
 version             0.10.23
+revision            1
 description         \
     A set of good-quality plug-ins for GStreamer under GStreamer's preferred \
     license, LGPL.
@@ -28,7 +29,7 @@ depends_lib	\
     port:aalib \
     port:esound \
     port:flac \
-    port:gnome-keyring \
+    port:libgnome-keyring \
     port:libcaca \
     port:libcdio \
     port:libdv \
