--- a/dports/gnome/gthumb/Portfile
+++ b/dports/gnome/gthumb/Portfile
@@ -4,6 +4,7 @@ PortSystem              1.0
 
 name                    gthumb
 version                 2.10.11
+revision                1
 set branch              [join [lrange [split ${version} .] 0 1] .]
 description             Image viewer and browser for the gnome desktop.
 long_description        ${description}
@@ -27,7 +28,7 @@ depends_lib \
     port:libgphoto2 \
     port:avahi \
     port:esound \
-    port:gnome-keyring \
+    port:libgnome-keyring \
     port:gnome-vfs \
     port:howl \
     port:libart_lgpl \
