--- a/dports/gnome/libsoup/Portfile
+++ b/dports/gnome/libsoup/Portfile
@@ -6,7 +6,7 @@ PortGroup       archcheck 1.0
 
 name            libsoup
 version         2.28.2
-revision        1
+revision        2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      gnome net
 platforms       darwin
@@ -36,7 +36,7 @@ depends_lib     port:libxml2 \
                 port:sqlite3 \
                 port:gconf \
                 port:libproxy \
-                port:gnome-keyring
+                port:libgnome-keyring
 
 archcheck.files \
     lib/libgcrypt.dylib \
@@ -50,7 +50,7 @@ test.target     check
 variant no_gnome description "Disable GNOME support" {
     depends_lib-delete \
         port:gconf \
-        port:gnome-keyring
+        port:libgnome-keyring
 
     configure.args-append \
         --without-gnome
