--- a/dports/gnome/vino/Portfile
+++ b/dports/gnome/vino/Portfile
@@ -5,6 +5,7 @@ PortSystem	1.0
 
 name		vino
 version         2.26.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 homepage	http://www.gnome.org
 description	Vino is a VNC server for the current GNOME user
@@ -30,7 +31,7 @@ depends_lib     port:gconf \
                 port:libgnomeui \
                 port:libsoup \
                 port:libglade2 \
-                port:gnome-keyring \
+                port:libgnome-keyring \
                 port:libnotify \
                 port:gnutls \
                 port:libgcrypt \
