--- a/dports/comms/telepathy-mission-control/Portfile
+++ b/dports/comms/telepathy-mission-control/Portfile
@@ -6,6 +6,7 @@ PortSystem      1.0
 name            telepathy-mission-control
 set sfname      mission-control
 version         4.67
+revision        1
 categories      comms
 maintainers     devans openmaintainer
 platforms       darwin
@@ -29,4 +30,4 @@ depends_build   port:pkgconfig \
 
 depends_lib     port:libtelepathy \
                 port:gconf \
-                port:gnome-keyring
+                port:libgnome-keyring
