--- a/dports/games/teg/Portfile
+++ b/dports/games/teg/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name            teg
 version         0.11.2
-revision        4
+revision        5
 categories      games
 maintainers     nomaintainer
 description     Tenes Empanadas Graciela - A risk clone
@@ -58,7 +58,7 @@ depends_lib	\
 	port:audiofile \
 	port:esound \
 	port:freetype \
-	port:gnome-keyring \
+	port:libgnome-keyring \
 	port:openssl \
 	port:p5-xml-parser \
 	port:rarian \
