--- a/dports/net/gq/Portfile
+++ b/dports/net/gq/Portfile
@@ -4,7 +4,7 @@ PortSystem      1.0
 
 name            gq
 version         1.2.1
-revision        1
+revision        2
 categories      net
 platforms       darwin
 maintainers     gmail.com:syzdek
@@ -22,7 +22,7 @@ depends_lib     path:lib/pkgconfig/glib-2.0.pc:glib2 \
                 port:expat \
                 port:openldap \
                 port:openssl \
-                port:gnome-keyring \
+                port:libgnome-keyring \
                 port:libglade2
 
 configure.ldflags-append -lcrypto
