--- a/dports/x11/gksu/Portfile
+++ b/dports/x11/gksu/Portfile
@@ -4,6 +4,7 @@ PortSystem		1.0
 
 name			gksu
 version			1.3.7
+revision                1
 platforms		darwin
 categories		x11 sysutils
 maintainers		nomaintainer
@@ -19,7 +20,7 @@ master_sites		http://people.debian.org/~kov/gksu/old_stuff/gksu/
 checksums		md5 15031e06ebb482f8aa1515499212eeaf
 
 depends_lib		port:gtk2 \
-			port:gnome-keyring port:gconf \
+			port:libgnome-keyring port:gconf \
 			port:libgksu12 port:libgksuui10
 depends_build		port:pkgconfig
 
