Fix for ticket #26026.  Instead of hard-wiring QCA information, use PKG_CONFIG and let CMake figure it out.  When using Qt's Phonon, use #include <phonon...>, not <Phonon...>.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70520 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdenetwork4/Portfile
+++ b/dports/kde/kdenetwork4/Portfile
@@ -29,11 +29,16 @@ depends_lib-append  port:kdebase4-runtime \
                     port:libotr
 depends_run-append  port:qca-ossl
 
-set qca_dir         ${prefix}/libexec/qt4-mac
+post-extract {
+    # change #include <Phonon...> to <phonon...> in all files that
+    # contain that header.
+    foreach item [exec grep -lr "Phonon" ${workpath}/${distname}] {
+        reinplace "/#include/s@Phonon@phonon@" ${item}
+    }
+}
 
-configure.args-append   ../${distname} \
-                        -DQCA2_LIBRARIES=${qca_dir}/lib/libqca.2.dylib \
-                        -DQCA2_INCLUDE_DIR=${qca_dir}/include/QtCrypto
+configure.args-append   ../${distname}
+configure.pkg_config_path-append ${qt_dir}/lib/pkgconfig
 
 variant no_kopete conflicts libmsn xmms description "Do not install Kopete instant messaging client" {
     depends_lib-delete      port:qca \
