--- a/dports/kde/ktorrent/Portfile
+++ b/dports/kde/ktorrent/Portfile
@@ -24,11 +24,8 @@ depends_lib-append  port:kdebase4-runtime port:kdepimlibs4 \
 
 depends_build-append bin:perl:perl5
 
-set qca_dir          ${prefix}/libexec/qt4-mac
-
-configure.args-append	../${distname} \
-		-DQCA2_LIBRARIES=${qca_dir}/lib/libqca.2.dylib \
-		-DQCA2_INCLUDE_DIR=${qca_dir}/include/QtCrypto 
+configure.args-append	../${distname}
+configure.pkg_config_path-append ${qt_dir}/lib/pkgconfig
 
 post-extract {
     # change #include <Phonon...> to <phonon...> in all files that
