--- a/dports/kde/kdegraphics4/Portfile
+++ b/dports/kde/kdegraphics4/Portfile
@@ -32,9 +32,8 @@ patchfiles          patch-gwenview-lib-document-view-videoviewadapter.cpp.patch 
 set qca_dir         ${prefix}/libexec/qt4-mac
 
 configure.args-append   ../${distname} \
-                        -DQCA2_LIBRARIES=${qca_dir}/lib/libqca.2.dylib \
-                        -DQCA2_INCLUDE_DIR=${qca_dir}/include/QtCrypto \
                         -DGWENVIEW_SEMANTICINFO_BACKEND=None
+configure.pkg_config_path-append ${qt_dir}/lib/pkgconfig
 
 variant gphoto2 description {Required to build the kamera project} {
     depends_lib-append port:gphoto2
