Fix for ticket #26034: On 10.4, the 'depth' option of 'find' doesn't work the same as under 10.5+.  Replace that with a combination of 'ls | grep | sed'.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70523 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -306,17 +306,17 @@ post-destroot {
     # ${qt_dir}/include/FOO, for each FOO in the frameworks, and link
     # into the headers provided by the FOO framework
     if {![variant_isset no_framework]} {
-        foreach tfm [exec find ${destroot}${qt_dir}/lib -name "*.framework" \
-                         -type d -depth 1 | sed -e "s@\.framework@@g" \
-                         -e "s@${destroot}${qt_dir}/lib/@@g"] {
+        # retrieve list of all installed frameworks
+        foreach framework [exec ls ${destroot_qt}/lib | \
+                               grep framework | \
+                               sed -e "s@\\.framework.*@@"] {
             # remove the include directory, if it exists
-            if {[file exists ${destroot_qt}/include/${tfm}] } {
-                # if it exists
-                delete ${destroot_qt}/include/${tfm}
+            if {[file exists ${destroot_qt}/include/${framework}] } {
+                delete ${destroot_qt}/include/${framework}
             }
-            # link into the framework's Headers
-            ln -s ${qt_dir}/lib/${tfm}.framework/Headers \
-                ${destroot_qt}/include/${tfm}
+            # link in the framework's Headers
+            ln -s ${qt_dir}/lib/${framework}.framework/Headers \
+                ${destroot_qt}/include/${framework}
         }
     }
 
