ruby/rb-rabbit: upgrade to 0.6.5
git-svn-id: https://svn.macports.org/repository/macports/trunk@70524 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb-rabbit/Portfile
+++ b/dports/ruby/rb-rabbit/Portfile
@@ -3,8 +3,8 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		rabbit 0.6.4 setup.rb {README.en sample misc}
-revision		1
+ruby.setup		rabbit 0.6.5 setup.rb {README.en sample misc}
+revision		0
 maintainers		kimuraw
 description		An application to do presentation with RD document.
 long_description	This is an application to do presentation with RD document.\
@@ -19,10 +19,15 @@ categories-append	graphics
 platforms		darwin
 homepage        {http://www.cozmixng.org/~rwiki/?cmd=view;name=Rabbit}
 license			Ruby
+if {[info exists supported_archs]} {
+	supported_archs noarch
+}
 
 depends_lib-append	port:rb-gtk2 port:rb-rsvg port:rb-poppler \
 					port:rb-htree port:rb-div \
 					port:rb-rdtool port:rb-rttool
+# rabbiter requires tweetstream and password
+depends_lib-append	port:rb-tweetstream port:rb-password
 
 post-build {
 	reinplace "s|^#!.*ruby|#!${ruby.bin}|" \
@@ -30,16 +35,17 @@ post-build {
 		${worksrcpath}/bin/rabbit-command \
 		${worksrcpath}/bin/rabbit-theme-manager \
 		${worksrcpath}/bin/rabrick \
-		${worksrcpath}/bin/rabbirc
+		${worksrcpath}/bin/rabbirc \
+		${worksrcpath}/bin/rabbitter
 }
 post-destroot {
 	delete "${destroot}${prefix}/bin/rabbit.bat"
 }
 
 master_sites    http://www.cozmixng.org/~kou/download/
-checksums		md5 19ffa74924a59a425c336d8b99cf76d1 \
-				rmd160 0243187185641923232c71fffd16d4ce22cf73bb \
-				sha1 77b9850a2a616b45790735ec544d039503fd2327
+checksums		md5 9d2122bdae51afa3c34f7e7406c4e2ce \
+				rmd160 c7acf78ea025dc65d4e78ed94971c3fe130413b9 \
+				sha1 8533d55a3ae51a05360cd2fc73cf4f80d814c969
 
 livecheck.type	regex
 livecheck.url	http://raa.ruby-lang.org/project/rabbit/
