webkit-gtk: depend on libgnome-keyring, remove legacy svg_filters variant, rebuild.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70527 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/webkit-gtk/Portfile
+++ b/dports/www/webkit-gtk/Portfile
@@ -6,7 +6,7 @@ PortSystem	1.0
 name		webkit-gtk
 epoch           1
 version		1.2.3
-revision        0
+revision        1
 description	Apple's WebKit HTML rendering library for GTK+
 long_description ${description}
 maintainers	gmail.com:myschizobuddy devans
@@ -78,24 +78,16 @@ variant no_video description {Disable HTML5 video support using gstreamer} {
 #
 
 variant gnome_keyring description {Enable support for gnomekeyring} {
-        depends_lib-append      port:gnome-keyring
+        depends_lib-append      port:libgnome-keyring
         configure.args-append   --enable-gnomekeyring
 }
 
 #
 # variant to enable filter support which is disabled by default
-# was svg_filters previously but renamed to follow configure arg usage
 #
 
 variant filters description {Enable support for SVG filters (experimental)} {
 	configure.args-append	--enable-filters
-}
-
-#
-# include dummy variant to ease transition from svg_filters to filters
-#
-
-variant svg_filters requires filters description {Build with +filters if +svg_filters was previously installed} {
 }
 
 #
