devhelp: update to version 2.30.1, use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70528 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/devhelp/Portfile
+++ b/dports/gnome/devhelp/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            devhelp
-version         0.23.1
+version         2.30.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Devhelp is an API documentation browser for GTK+ and GNOME.
 long_description \
@@ -20,21 +20,21 @@ homepage        http://live.gnome.org/${name}
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     9bb80a1e82eb0de57cdd7f4234880b2f \
-                sha1    9ce37ef216adb2a7573a111a3181ae5e4ed7b7a6 \
-                rmd160  c6521c8f48449ac73e6115187423ee9ce2f25506
+checksums       md5     447413a54d3bec2480e9a290e261703d \
+                sha1    51eda53f04080eaae75b6e62e222b98fe5bb0d6f \
+                rmd160  2ce6762a7838afad03f237ab0ac662cae426163c
 
 depends_build   port:pkgconfig \
-                port:python25
+                port:python26
 
 depends_lib     port:webkit-gtk \
                 port:gconf  \
-                port:libwnck
+                port:libwnck \
+                port:libunique
 
-configure.args  --disable-schemas-install \
-                --with-compile-warnings=yes
+configure.args  --disable-schemas-install
 
-configure.python ${prefix}/bin/python2.5
+configure.python ${prefix}/bin/python2.6
 
 post-activate {
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
