libgnomeui: depend on libgnome-keyring, rebuild.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70530 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libgnomeui/Portfile
+++ b/dports/gnome/libgnomeui/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            libgnomeui
 version         2.24.3
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -24,7 +25,7 @@ checksums       md5     ceab6f4370581d1a03c09f15cc103099 \
 
 depends_lib     port:libbonoboui \
                 port:gnome-icon-theme \
-                port:gnome-keyring
+                port:libgnome-keyring
 
 variant no_x11 {
 	configure.args-append   --disable-static --enable-shared --without-x
