poppler: update to version 0.14.2, enable HTTP support via libcurl.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70531 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/poppler/Portfile
+++ b/dports/graphics/poppler/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 PortGroup  muniversal 1.0
 
 name        poppler
-version     0.14.1
+version     0.14.2
 maintainers devans openmaintainer
 categories  graphics
 platforms   darwin
@@ -16,14 +16,15 @@ long_description ${description}
 
 master_sites ${homepage}
 
-checksums   md5     1d27cb8a09aaa373660fd608b258022a \
-            sha1    28229f897451feba5682d74defe7d67361eeee11 \
-            rmd160  7b8d084b05ccc374e9add9771b781a88948907a7
+checksums   md5     f050ade7438aa45e50f94b3f86848d28 \
+            sha1    a93e85c322ce36da4e9b4e9e52c9fd12ea5f4d6f \
+            rmd160  bdbb901f85edd33ecd3ca1805a0f46c806bdb853
 
 depends_build \
     port:pkgconfig
 
 depends_lib \
+    port:curl \
     port:gtk2 \
     port:lcms \
     port:openjpeg \
@@ -43,6 +44,7 @@ configure.args \
     --disable-poppler-qt4 \
     --enable-xpdf-headers \
     --enable-zlib \
+    --enable-libcurl \
     --mandir=${prefix}/share/man
 
 variant quartz {
