xorg-xextproto: Bump to 7.1.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@70537 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-xextproto/Portfile
+++ b/dports/x11/xorg-xextproto/Portfile
@@ -2,7 +2,7 @@
 PortSystem 1.0
 
 name		xorg-xextproto
-version		7.1.1
+version		7.1.2
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org xextproto
@@ -12,15 +12,18 @@ long_description Prototype headers for Xext
 master_sites 	http://xorg.freedesktop.org/archive/individual/proto
 distname	xextproto-${version}
 use_bzip2	yes
+
+checksums           md5     263ae968b223c23b2986603d84e5c30e \
+                    sha1    be6303a9449277af58f38e1be57e442d98f400fe \
+                    rmd160  ca120b173646957da8026c7033f4ce44770485af
+
+configure.args --disable-specs
+
 if {[info exists supported_archs]} {
     supported_archs noarch
 } else {
     universal_variant no
 }
-
-checksums           md5     fb6ccaae76db7a35e49b12aea60ca6ff \
-                    sha1    1bb4bd12d65a17b3168dc9b4e028b33a2f7b2cad \
-                    rmd160  10d840838da0870f9ff83afddc12eaea46098e54
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
